# llmpr

./: .gitignore  pyproject.toml
notebooks/: eda_dataset.py  gemmarun.py
src/llmpr/: eda.py  infer.py  load_data.py  merge_peft.py  merge_peft.sh  metric.py  prompt.py  train_gemma.py  train_ppo.py  use_tokenizer.py  vllm_infer.py
src/llmpr/datasets/: dataset.py  prompt_generator.py
src/llmpr/orlhf/: ppo.py
tests/: test_dataset.py  test_metric.py
